--- a/documentation/requirements.txt
+++ b/documentation/requirements.txt
@@ -1,7 +1,7 @@
 # markdown suport
-recommonmark
+#recommonmark
 # markdown table suport
-sphinx-markdown-tables
+#sphinx-markdown-tables
 
 # theme default rtd
 
