--- a/documentation/requirements.txt
+++ b/documentation/requirements.txt
@@ -6,7 +6,7 @@
 # theme default rtd
 
 # crate-docs-theme
-sphinx-rtd-theme
+#sphinx-rtd-theme
 Sphinx==5.1.1
 recommonmark==0.7.1
 sphinx-markdown-tables==0.0.17
