--- a/documentation/requirements.txt
+++ b/documentation/requirements.txt
@@ -1,12 +1,13 @@
 # markdown suport
 #recommonmark
+recommonmark
 # markdown table suport
-#sphinx-markdown-tables
+sphinx-markdown-tables
 
 # theme default rtd
 
 # crate-docs-theme
-#sphinx-rtd-theme
-Sphinx==5.1.1
-recommonmark==0.7.1
-sphinx-markdown-tables==0.0.17
+sphinx-rtd-theme
+#Sphinx==5.1.1
+#recommonmark==0.7.1
+#sphinx-markdown-tables==0.0.17
